[package]
name = "first-rust-psp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#Cargo basicamente es el manejador de dependencias de rust
#Aqui agrego mis dependncias Agregar la dependencia de psp
[dependencies]
psp = "0.1.2"